# DeepFake-Detection-Using-Pytorch

./: README.md
DeepFake_Detection_Pip_Package/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
DeepFake_Detection_Pip_Package/Deep_Fake_Detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
DeepFake_Detection_Pip_Package/deepfake_detection/: DeepFake_Utils.py
UtilsFiles/: Deep_Fake_utils.py
