[metadata]
name = Deep Fake Detection
version = 0.0.10
author = Mohamed Sebaie
author_email = mohamedsebaie1@gmail.com
description = Deep Fake Detection Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MohamedSebaie/DeepFake-Detection-Using-Pytorch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True